<resources>
    <string name="app_name">AndroidDev</string>
    <string name="welcome_heading">Пожалуй, лучший фитнес трекер в ДВФУ!</string>
    <string name="welcome_subheading">Созданный студентами</string>
    <string name="get_started">Зарегистрироваться</string>
    <string name="login">Уже есть аккаунт?</string>

    <string name="registration_title">Регистрация</string>
    <string name="registration_login_hint">Логин</string>
    <string name="registration_nickname_hint">Имя или никнейм</string>
    <string name="registration_password_hint">Пароль</string>
    <string name="registration_confirm_password_hint">Повторите пароль</string>
    <string name="registration_gender_title">Пол</string>
    <string name="registration_male_radiobutton">Мужской</string>
    <string name="registration_female_radiobutton">Женский</string>
    <string name="registration_other_radiobutton">Другое</string>
    <string name="registration_terms_and_conditions">Нажимая на кнопку, вы соглашаетесь с политикой конфиденциальности и обработки персональных данных, а также принимаете пользовательское соглашение</string>

    <string name="login_title">Вход</string>
    <string name="login_button_text">Войти</string>

    <string name="bottom_nav_activity">Активность</string>
    <string name="bottom_nav_profile">Профиль</string>

    <string name="tab_my_activity">Моя</string>
    <string name="tab_users_activity">Пользователей</string>

    <string name="details_action_delete">Удалить</string>
    <string name="details_action_send">Отправить</string>
    <string name="details_comment_hint">Комментарий</string>
    <string name="details_start">Старт</string>
    <string name="details_separator">|</string>
    <string name="details_finish">Финиш</string>

    <string name="profile_title">Профиль</string>
    <string name="profile_save">Сохранить</string>
    <string name="profile_login_hint">Логин</string>
    <string name="profile_nickname_hint">Имя или никнейм</string>
    <string name="profile_change_password">Изменить пароль</string>
    <string name="profile_exit">Выйти</string>
    <string name="profile_old_password">Старый пароль</string>
    <string name="profile_new_password">Новый пароль</string>
    <string name="profile_repeat_password">Повторите пароль</string>
    <string name="profile_accept">Принять</string>

    <string name="select_activity_title">Погнали? :)</string>
    <string name="select_activity_start">Начать</string>
    <string name="activity_bicycle">Велосипед</string>
    <string name="activity_run">Бег</string>
    <string name="activity_step">Шаг</string>
</resources>